--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,12 +1,13 @@
 services:
   iotdevicemanager.server:
     environment:
+      - ConnectionStrings__DefaultConnection=${DB_CONNECTION}
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
     ports:
-      - "8080"
-      - "8081"
+      - "5089:8080"
+      - "7221:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
