--- a/iotdevicemanager.client/Dockerfile
+++ b/iotdevicemanager.client/Dockerfile
@@ -1,13 +1,18 @@
-FROM node:22
-
+FROM node:22-alpine AS build
 WORKDIR /app
-
-COPY package.json ./
-
+COPY package*.json ./
 RUN npm install
-
 COPY . .
+RUN npm run build
 
-EXPOSE 53121
+#EXPOSE 53121
 
-CMD ["npm", "run", "dev"]
+#CMD ["npm", "run", "dev"]
+
+# Stage 2: Serve with Nginx
+FROM nginx:stable-alpine
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
