--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,18 @@ services:
         networks:
             - app_network
 
+    iotdevicemanager.angularClient:
+        image: ${DOCKER_REGISTRY-}iotdevicemanagerangularclient
+        build:
+            context: ./IoTDeviceManager.angularClient
+            dockerfile: Dockerfile
+        ports:
+            - "63217:63216"
+        depends_on:
+            - iotdevicemanager.server
+        networks:
+            - app_network
+
 networks:
   app_network:
     driver: bridge
