--- a/iotdevicemanager.client/nginx.conf
+++ b/iotdevicemanager.client/nginx.conf
@@ -1,9 +1,9 @@
 server {
-    listen 53121;
+    listen 80;
     server_name localhost;
 
     root /usr/share/nginx/html;
-    index index.html index.htm;
+    index index.html;
 
     location / {
         # Check if a file or directory exists, else route to index.html
