--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -18,7 +18,7 @@ server {
     
     # Route /api to the .NET Web API container
     location /api/ {
-        proxy_pass http://webapi/;
+        proxy_pass http://webapi/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
@@ -26,7 +26,6 @@ server {
     # Optionally, proxy any other unmatched requests to one of your frontends,
     # or serve a default page.
     location / {
-        # For example, redirect to a landing page on your Angular frontend:
         proxy_pass http://react_frontend/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
