--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -2,6 +2,19 @@ server {
     listen 80;
     server_name _;  # This will match any server name
 
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl:
+    server_name _;
+
+    # SSL certificate settings
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;  # Enforce secure protocols
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     # Route /react to the React frontend container
     location /react/ {
         proxy_pass http://react_frontend/;
