--- a/iotdevicemanager.client/package.json
+++ b/iotdevicemanager.client/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@fluentui/react-components": "^9.60.0",
+    "@hookform/resolvers": "^4.1.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.3.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
