--- a/IoTDeviceManager.angularClient/package.json
+++ b/IoTDeviceManager.angularClient/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@primeng/themes": "^19.0.9",
+    "@tailwindcss/postcss": "^4.0.14",
     "jest-editor-support": "*",
+    "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.14",
+    "tailwindcss-primeui": "^0.5.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
