--- a/IoTDeviceManager.angularClient/package.json
+++ b/IoTDeviceManager.angularClient/package.json
@@ -23,9 +23,11 @@
     "@primeng/themes": "^19.0.9",
     "@tailwindcss/postcss": "^4.0.14",
     "jest-editor-support": "*",
+    "ngrx-store-localstorage": "^19.0.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.9",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.14",
     "tailwindcss-primeui": "^0.5.1",
