--- a/nginx-proxy/Dockerfile
+++ b/nginx-proxy/Dockerfile
@@ -10,8 +10,8 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY /ssl/cert.pem /etc/nginx/ssl/cert.pem
 COPY /ssl/key.pem /etc/nginx/ssl/key.pem
 
-# Expose port 80
-EXPOSE 80 443
+# Expose ports 80, 443, 8080 
+EXPOSE 80 443 8080
 
 # Start Nginx in the foreground
 CMD ["nginx", "-g", "daemon off;"]
