--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -6,6 +6,17 @@ server {
 }
 
 server {
+    listen 8080;
+    server_name _;  # This will match any server name
+
+    location / {
+        proxy_pass http://webapi/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
+
+server {
     listen 443 ssl;
     server_name _;
 
